# sportball_photography

./: .cursorrules  .gitattributes  .gitignore  =0.7.3  =1.16.0  =4.8.0  CONFIGURATION_SYSTEM_README.md  FACE_CLUSTERING_README.md  IMAGE_SIDECAR_RUST_REQUIREMENTS.md  IMPLEMENTATION_STATUS.md  JSON_VALIDATION_BENCHMARK_RESULTS.md  Makefile  README.md  REQUIREMENTS.md  REQUIREMENTS_JERSEY_COLOR_SPLITTING.sdoc  REQUIREMENTS_UNIFIED_EXTRACTION.sdoc  RUST_SIDECAR_INTEGRATION.md  SIDECAR_REAL_IMAGE_VALIDATION.md  SIDECAR_TEST_RESULTS.md  SPORTBALL_SUMMARY.md  UNIFIED_GAME_ORGANIZER_README.md  aggressive_gpu_stress.py  analyze_pose_resolution_results.py  benchmark_json_validation.py  combined_detector.py  comprehensive_multi_resolution_analyzer.py  demo_config_commands.py  enhanced_game_organizer.py  enhanced_pose_analyzer.py  face_benchmark_results.json  face_clustering.json  face_clustering.py  face_detection.py  face_extraction.py  face_extractor.py  game_detection_summary.md  game_detector.py  game_organizer.py  game_split_config.py  game_splits.txt  (+39 more)
.cursor/: rules
docs/: UNIFIED_GAME_ORGANIZER_README.md
examples/: jersey_splitting_example.py
game_organized/: config.toml
output/_cache/0.13.0/: dependencies
output/_cache/0.13.0/jinja/4b9d7eea832b5f2a8c505e8b77792ea2/: tmpl_139aa5a80e200230a3e7f7fe5d5899e8e25afeac.py  tmpl_182cdf4a7cdb3890777bf47b5d50802806945230.py  tmpl_21f1bf813a0e462ac9180684e69c926521c1a60c.py  tmpl_2745540b7d452e6d28b6c806f5000c93c0d21fe0.py  tmpl_2a4fe86433804858fd4f11a3e52e8da8b37eddf2.py  tmpl_5f6ab8424edf4f32e931d73da1abdfcc9f299c1f.py  tmpl_774b1c96791a14548a7526fd9baae25aa656ae41.py  tmpl_821c305bee9c084eb651661945aef8049f67ae86.py  tmpl_83683ae0e9f048bb65f71c5c2f408bc75b319b01.py  tmpl_8a51bdee7832a67cde32f2b848acb3f9e12dd832.py  tmpl_8acdc10f1b5aee6ced18363ec8118b02dbad9792.py  tmpl_98eee7c33078735bf6129cb72fc27f293cb3d3d2.py  tmpl_98f5f2d7961ff4e38c81cde238c0cb7961c9a6af.py  tmpl_9914b3cb352aab5dc76d06850ddff3267db6ed37.py  tmpl_c11d663bc51649b46cd46077847991a4899a62c2.py  tmpl_c20ee41a2e12a0bac6bdc6ec324c0b80c88e234a.py  tmpl_c99a6a827593541e905cc59c316993c2c156affe.py  tmpl_cac9d49081bd9429b9304333d386353a6ff9889f.py  tmpl_d4366613309d25fd5dc8eaedb6c64c9573d40c3c.py  tmpl_d6371f7e2860c83d863e7dac97fdd5660e6a5e63.py  tmpl_d69d4118940de2d015ba69e455f3ea0e9976da5f.py  tmpl_dc0cf52cf80801a81602b9c382e5d45829860525.py  tmpl_e87dd9dec424f6fe5f73e2d63b714bda87e0c18e.py  tmpl_e8bebfd3e3be5a15d98c985e429ed30a164deb0f.py  tmpl_f10b26a9cf3f6c264145c270db26b5941a992f8c.py  tmpl_f8c619e241c8950e8962cfaa5f9b956425498b22.py
output/_cache/0.13.0/sdoc/: REQUIREMENTS_UNIFIED_EXTRACTION.sdoc_6754868b80305063a1807862843d9631_86e77f93b19934a5d9ead70df1ed10a0
output/html/: index.html
output/html/_static/: project_map.js  static_html_search_index.js
output/html/sportball_photography/: REQUIREMENTS_UNIFIED_EXTRACTION-DEEP-TRACE.html  REQUIREMENTS_UNIFIED_EXTRACTION-TABLE.html  REQUIREMENTS_UNIFIED_EXTRACTION-TRACE.html  REQUIREMENTS_UNIFIED_EXTRACTION.html
requirements/: REQUIREMENTS_JERSEY_COLOR_SPLITTING.sdoc  REQUIREMENTS_RUST_SIDECAR_IMPLEMENTATION.sdoc  REQUIREMENTS_SIDECAR_BINARY_FORMAT.sdoc  REQUIREMENTS_UNIFIED_DETECTION.md  REQUIREMENTS_UNIFIED_EXTRACTION.md  REQUIREMENTS_UNIFIED_EXTRACTION.sdoc
sportball/: .gitignore  Makefile  SPORTBALL_SUMMARY.md  __init__.py  _version.py  core.py  decorators.py  pyproject.toml  setup_sportball.py  sidecar.py  utils.py
sportball.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
sportball/cli/: __init__.py  __main__.py  main.py  minimal_main.py  shared_utils.py  ultra_minimal_main.py  utils.py
sportball/cli/commands/: __init__.py  annotate_commands.py  ball_commands.py  face_commands.py  game_commands.py  object_commands.py  quality_commands.py  sidecar_commands.py  unified_commands.py  utility_commands.py
sportball/detection/: __init__.py  adapters.py  base.py  integration.py  parallel_validator.py  registry.py  rust_performance.py  rust_sidecar.py
sportball/detectors/: __init__.py  color_analysis.py  face.py  face_benchmark.py  face_clustering.py  game.py  jersey_splitting.py  object.py  pose.py  quality.py
sportball/sportball/: __init__.py  sidecar.py
sportball/sportball/analyzers/: __init__.py  analyze_face_resolution_results.py  game_organizer.py  multi_resolution.py  multi_resolution_face_analyzer.py  phase1_analyzer.py  standalone_phase1_analyzer.py
sportball/sportball/cli/: main.py  utils.py
sportball/sportball/cli/commands/: __init__.py  face_commands.py  object_commands.py  sidecar_commands.py  utility_commands.py
sportball/sportball/config/: __init__.py  paths.py  settings.py
sportball/sportball/core/: __init__.py
sportball/sportball/detectors/: __init__.py  color.py  face.py  object.py
sportball/sportball/utils/: __init__.py  cuda_utils.py  file_utils.py
src/soccer_photo_sorter/: __init__.py
src/soccer_photo_sorter/cli/: __init__.py  color_sorter.py  face_sorter.py  main.py  number_sorter.py
src/soccer_photo_sorter/config/: __init__.py  config_loader.py  settings.py
src/soccer_photo_sorter/core/: __init__.py  image_processor.py
src/soccer_photo_sorter/detectors/: __init__.py  action_classifier.py  ball_detector.py  field_analyzer.py  quality_assessor.py
src/soccer_photo_sorter/utils/: logging_utils.py
tests/: __init__.py  test_jersey_splitting.py  test_sidecar.py  test_sportball.py
