[versioneer]
VCS = git
style = pep440
versionfile_source = sportball/_version.py
versionfile_build = sportball/_version.py
tag_prefix = v
parentdir_prefix = sportball-

[metadata]
name = sportball
version = attr: sportball.__version__

[options]
packages = find:
package_dir = 
    = .

[options.packages.find]
where = .
include = sportball*
exclude = tests*